spacing issue fix

--- a/src/styles/sass/style.scss
+++ b/src/styles/sass/style.scss
@@ -1202,7 +1202,7 @@ body {
     border: 0;
   }
   
-  .css-kw13he-MuiDialogContent-root {
+  .MuiDialogContent-root {
     padding: 16px;
   }
   
